<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkCyan"
    tools:context=".features.visited.VisitedFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include layout="@layout/toolbar_visited"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imgVisited"
                    android:layout_width="145dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_deep_movie"
                    app:riv_corner_radius="5dip"
                    app:riv_mutate_background="true"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/txtVisitTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_name"
                    android:textColor="@color/white_alpha_70"
                    android:layout_toEndOf="@id/imgVisited"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/txtGenreTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtVisitTitle"
                    android:text="@string/genre"
                    android:textColor="@color/white_alpha_70"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/imgVisited"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/txtRatingTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtGenreTrack"
                    android:text="Rating"
                    android:textColor="@color/white_alpha_70"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/imgVisited"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/txtOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtRatingTrack"
                    android:text="Story"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/imgVisited"
                    android:textSize="14sp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/track_you_visited"
                        android:layout_weight="1"
                        android:textColor="@color/colorWhite"
                        android:textSize="25sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_all"
                        android:layout_marginEnd="20dp"
                        android:textColor="#8ea2ff"
                        android:textSize="18sp"/>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="@dimen/pixels_8"
                    tools:listitem="@layout/item_movie_visted"
                    android:id="@+id/listVisited">
                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
