<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkCyan"
    tools:context=".features.details.MovieDetailsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/toolbar_movie_details"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="305dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_rectangle">
                <com.makeramen.roundedimageview.RoundedImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imgDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:riv_corner_radius="5dip"
                    app:riv_mutate_background="true"/>


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:layout_marginStart="@dimen/pixels_8"
                android:layout_marginEnd="@dimen/pixels_8">
                <TextView
                    android:id="@+id/txtDetailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title"
                    android:textStyle="bold"
                    android:textColor="@color/gold"
                    android:textSize="22sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp">
                <TextView
                    android:id="@+id/txtDetailGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/in_theater"
                    android:textColor="#4a4a4a"
                    android:textSize="22sp"/>
                <TextView
                    android:id="@+id/txtDetailsShowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_dateTime"
                    android:layout_marginStart="8dp"
                    android:textSize="16sp"
                    android:textColor="#9b9b9b"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:progressTint="#ffba49"
                    android:stepSize="0.5"
                    android:layout_marginTop="6dp"
                    android:rating="5"/>

                <TextView
                    android:id="@+id/txtDetailsRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(1137)"
                    android:layout_marginStart="8dp"
                    android:textSize="20sp"
                    android:textColor="#9b9b9b"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sypnosis"
                    android:textColor="#4a4a4a"
                    android:textSize="22sp"/>
                <LinearLayout
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/txtDetailSypnosis"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Content"
                        android:textColor="@color/colorWhite"
                        android:maxLines="10"
                        android:lines="15"
                        android:textSize="18sp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
